--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -39,7 +39,8 @@ jobs:
         TG_TO_USER_NAME: ${{ secrets.TG_TO_USER_NAME }}
         TG_APP_ID: ${{ secrets.TG_APP_ID }}
         TG_APP_HASH: ${{ secrets.TG_APP_HASH }}
-        WX_PUB_ID: ${{ secrets.WX_PUB_ID}}
-        WX_OPEN_ID: ${{ secrets.WX_OPEN_ID }}
+        WX_VMALL_APPID: ${{ secrets.WX_VMALL_APPID }}
+        WX_FHL_APPID: ${{ secrets.WX_FHL_APPID }}
+        WX_HYC_APPID: ${{ secrets.WX_HYC_APPID }}
       run: |
         python ./main.py
